:sparkles: criar elemento
atribuído um botão para a criação de um novo elemento (nova TASK)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="blocoContent" ondrop="drop(event)" ondragover="allowDrop(event)">
         <h1>To Do</h1>
-          <div class="tesk" draggable="true" ondragstart="drag(event)">
+          <div id="task1" class="tesk" draggable="true" ondragstart="drag(event)">
             <p>bora fazer um teste</p>
           </div>
 
@@ -41,5 +41,6 @@
     </div>
   </section>
 
+<script src="script.js"></script>
 </body>
 </html>
